<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient_purple_blue"
    tools:context=".Pages.SignInPage.Controller.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_icon_app"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:src="@drawable/app_icon_launcher"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop = "46dp"
                android:orientation="vertical">

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/text_field_boxes_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/edt_email"
                    >

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id = "@+id/edt_email"
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/sign_in_ic_account_circle_black_24dp"
                        android:inputType="textEmailAddress"
                        app:suffix="\@gmail.com"
                        android:textSize="20sp"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                    android:id="@+id/text_field_boxes_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelText="@string/edt_password"
                    app:hasClearButton="true"
                    app:minCharacters="6"
                    >

                    <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                        android:id = "@+id/edt_password"
                        android:layout_width = "match_parent"
                        android:layout_height = "wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@drawable/sign_in_ic_lock_black_24dp"
                        android:inputType="textPassword"
                        android:textSize="20sp"/>

                </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_sign_in"
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:layout_marginTop="30dp"
                    android:background= "@drawable/button_selector_enabled"
                    android:textAllCaps="false"/>
                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_go_to_sign_up"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="italic"
                    android:textColor="#0033CC"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>